--- a/css/astro.css
+++ b/css/astro.css
@@ -19,6 +19,7 @@ h4,
 h5,
 h6 {
     margin: 0;
+    padding-top: 30px;
 }
 
 
@@ -28,6 +29,25 @@ h6 {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.container__text {
+    width: 70%;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+
+/*Image*/
+
+.image {
+    width: 100%;
+    margin-top: 30px;
+}
+
+.image_2 {
+    margin: 10px;
 }
 
 
@@ -96,7 +116,7 @@ h6 {
     vertical-align: top;
     margin: 0 15px;
     position: relative;
-    color: #fff;
+    color: black;
     text-decoration: none;
     transition: color .2s linear;
 }
